examples/type_system/failing/129_orphan_constructor_pattern_statement.flx
Some(x);
let after = 1
